classDiagram

class ActiveContour {
    +update(image)
    +converge()
    +step()
    -stepCycle1() [image-driven]
    -stepCycle2() [internal/geometric-driven]
    -contourData
    -externalSpeedModel
    -internalSpeedModel
}

class ContourData {
    -outerContour [Lout]
    -innerContour [Lin]
    -levelSet [phi]
}

ActiveContour *-- ContourData

class ContourPoint {
    -x
    -y
    -speed
}

ContourData *-- ContourPoint

class ISpeedModel {
    <<interface>>
    +computeSpeed(contourPoint, levelSet)
    +onImageChanged(image, contourData)
    +onStepCycle1()
    +onSwitch(contourPoint, direction)
    +fillDiagnostics(diagnostics)
}

class RegionGraySpeedModel {
    +computeSpeed(contourPoint, ...)
    +onImageChanged(grayImage, ...)
    +...()
    -meanOutside
    -meanInside
}

class RegionColorSpeedModel {
    +computeSpeed(contourPoint, ...)
    +onImageChanged(rgbImage, ...)
    +...()
    -meanRgbOutside
    -meanRgbInside
}

class MajorityInternalSpeed {
    +computeSpeed(contourPoint, ...)
}

ISpeedModel <|.. RegionGraySpeedModel
ISpeedModel <|.. RegionColorSpeedModel
ISpeedModel <|.. MajorityInternalSpeed

RegionGraySpeedModel --> ActiveContour

RegionColorSpeedModel --> ActiveContour

ActiveContour *-- MajorityInternalSpeed

%% Active Contour Engine
style ActiveContour fill:#f4f5ff,color:#1d1d1f,stroke:#6b6fcf,stroke-width:2px

%% Internal engine component
style MajorityInternalSpeed fill:#f4f5ff,color:#1d1d1f,stroke:#6b6fcf,stroke-width:2px

%% Speed models
style RegionGraySpeedModel fill:#eef8f2,color:#1d1d1f,stroke:#4fc98a,stroke-width:2px

style RegionColorSpeedModel fill:#eef8f2,color:#1d1d1f,stroke:#4fc98a,stroke-width:2px

%% Contract / Interface
style ISpeedModel fill:#ffffff,color:#444444,stroke:#c8c8c8,stroke-width:2px
